# tinyfugue

./: .gitattributes  .gitignore  CHANGES  CMakeLists.txt  CMakePresets.json  COPYING  CREDITS  Makefile  Makefile.in  README  README.OtherOS  README_WASM.md  aclocal.m4  bogus.mak  configure  configure.in  configure.orig  index.html
.github/workflows/: ci.yml  packages.yml  portability.yml
autom4te.cache/: output.1  requests  traces.1
cmake/: BuildTfLib.cmake  Docs.cmake  FeatureMode.cmake  FormatManpage.cmake  Install.cmake  PackageWasmDist.cmake  TfLib.cmake
cmake/modules/: CheckStdCHeaders.cmake  FindPCRE.cmake  FindPCRE2.cmake  FindUTF8PROC.cmake  SearchForFunction.cmake  SearchForHeader.cmake
debian/: changelog  control  copyright  docs  rules
help/: Makefile  html2tf.c  index.html
help/commands/: addworld.html  addworldtype.html  alias.html  at.html  bamf.html  beep.html  bind.html  break.html  cat.html  complete.html  connect.html  def.html  dokey.html  echo.html  edit.html  eval.html  exit.html  expr.html  fg.html  for.html  ftime.html  grep.html  if.html  limit.html  list_commands.html  listsockets.html  liststreams.html  load.html  log.html  map.html  more.html  paste.html  prompt.html  quit.html  quote.html  quoter.html  recall.html  recordline.html  repeat.html  return.html  (+9 more)
help/topics/: attributes.html  colors.html  copyright.html  evaluation.html  expressions.html  functions.html  hooks.html  interface.html  keybindings.html  locale.html  mail.html  mode.html  patterns.html  pcre.html  processes.html  prompts.html  proxy.html  scrollback.html  sockets.html  special_variables.html  status_line.html  substitution.html  tf.html  tfio.html  tfrc.html  triggers.html
html/: COPYING
m4/: ac_check_icu.m4  ax_compiler_vendor.m4
macos/: README
os2/: README  config.h  dmake.tl  make.tl  nmake.tl
packaging/: README.md  make-source-archive.sh  verify-install.sh
packaging/cygwin/: tinyfugue.cygport
packaging/freebsd/: Makefile  distinfo  pkg-descr  pkg-plist
packaging/homebrew/: tinyfugue.rb
packaging/rpm/: tinyfugue.spec
src/: CMakeLists.txt  attr.c  attr.h  attr_test.cc  cmdlist.h  command.c  command.h  default  dstring.c  dstring.h  enumlist.h  expand.c  expand.h  expr.c  expr.h  fd_set.h  funclist.h  globals.c  globals.h  help.c  help.h  history.c  history.h  hooklist.h  keyboard.c  keyboard.h  keylist.h  macro.c  macro.h  main.c  makehelp.c  malloc.c  malloc.h  opcodes.h  output.c  output.h  parse.h  pattern.c  pattern.h  port.h  (+31 more)
tests/: check_config.cmake  test_main.c  verify_install.cmake  wasm_smoke.mjs
tf-lib/: README  examples.old  grep.tf  kbbind.tf  kbfunc.tf  local-eg.tf  map.tf  spedwalk.tf  stdlib.tf  textutil.tf  tf-help  tfrc  tfstatus.tf  tr.tf  utilities.tf
unix/: Makefile  README  unix.mak  vars.mak.in
wasm/: tf_jslib.js
win32/: README
