cmake_minimum_required(VERSION 3.20)

project(tinyfugue VERSION 5.0.8 LANGUAGES C)

set(TF_VERSION_SHORT "50b8")
set(TF_VERSION_STRING "TinyFugue version 5.0 beta 8")

list(PREPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")

include(GNUInstallDirs)
set(CMAKE_CTEST_ARGUMENTS "--output-on-failure")
include(CTest)
include(CheckFunctionExists)
include(CheckIncludeFile)
include(CheckIncludeFiles)
include(CheckLibraryExists)
include(CheckStructHasMember)
include(CheckSymbolExists)
include(CheckTypeSize)
include(CMakePushCheckState)
include(SearchForFunction)
include(SearchForHeader)
include(cmake/FeatureMode.cmake)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
# Only enable link-path-derived install RPATH on platforms that require it.
if(CMAKE_SYSTEM_NAME STREQUAL "NetBSD" OR CMAKE_SYSTEM_NAME STREQUAL "SunOS")
    set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
endif()

option(TF_256COLORS "Enable 256 color support" ON)
option(TF_ATCP "Enable ATCP support" OFF)
option(TF_CORE "Enable core dumps" OFF)
option(TF_DEVELOPMENT "Enable development build markers" OFF)
option(TF_FLOAT "Enable floating point arithmetic and functions" ON)
option(TF_GETADDRINFO "Use getaddrinfo; disabling also disables IPv6" ON)
option(TF_GMCP "Enable GMCP support" OFF)
option(TF_HISTORY "Enable /recall and history features" ON)
option(TF_INET6 "Enable IPv6 support" ON)
option(TF_MAILCHECK "Enable mail checking" ON)
option(TF_MANPAGE "Generate and install a formatted cat manpage" OFF)
option(TF_OPTION102 "Enable telnet option 102 support" OFF)
option(TF_PROCESS "Enable /quote and /repeat" ON)
option(TF_VERSIONED "Add the release suffix to installed names" OFF)
option(TF_INSTALL_SYMLINK "Install an unversioned tf symlink" OFF)

set(TF_MAILDIR "AUTO" CACHE STRING
    "Mail spool directory, AUTO to detect one, or empty to disable")
set(TF_TERMCAP_LIBRARY "" CACHE STRING
    "Preferred library containing tgetent (for example termcap or ncurses)")
set(TF_EXTRA_INCLUDE_DIRS "" CACHE STRING
    "Additional semicolon-separated dependency include directories")
set(TF_EXTRA_LIBRARY_DIRS "" CACHE STRING
    "Additional semicolon-separated dependency library directories")

tf_feature_mode(TF_WIDECHAR AUTO "ICU wide-character support")
tf_feature_mode(TF_TLS AUTO "TLS support")
tf_feature_mode(TF_TERMCAP AUTO "termcap/curses terminal support")
tf_feature_mode(TF_ZLIB AUTO "zlib/MCCP support")

# Compatibility aliases for callers of the first CMake implementation.
set(old_boolean_options
    256COLORS ATCP CORE DEVELOPMENT FLOAT GETADDRINFO GMCP HISTORY INET6
    MAILCHECK MANPAGE OPTION102 PROCESS VERSION SYMLINK)
set(new_boolean_options
    TF_256COLORS TF_ATCP TF_CORE TF_DEVELOPMENT TF_FLOAT TF_GETADDRINFO
    TF_GMCP TF_HISTORY TF_INET6 TF_MAILCHECK TF_MANPAGE TF_OPTION102
    TF_PROCESS TF_VERSIONED TF_INSTALL_SYMLINK)
foreach(old new IN ZIP_LISTS old_boolean_options new_boolean_options)
    if(DEFINED "${old}")
        set("${new}" "${${old}}")
        message(DEPRECATION "Use -D${new}=... instead of -D${old}=...")
    endif()
endforeach()
set(old_mode_options WIDECHAR SSL CURSES)
set(new_mode_options TF_WIDECHAR TF_TLS TF_TERMCAP)
foreach(old new IN ZIP_LISTS old_mode_options new_mode_options)
    if(DEFINED "${old}")
        if("${${old}}")
            set("${new}" ON)
        else()
            set("${new}" OFF)
        endif()
        message(DEPRECATION "Use -D${new}=AUTO|ON|OFF instead of -D${old}=...")
    endif()
endforeach()

add_library(tflib STATIC)
add_executable(tf src/main.c)
add_executable(html2tf help/html2tf.c)
add_executable(makehelp src/makehelp.c)
target_link_libraries(tf PRIVATE tflib)

if(TF_EXTRA_INCLUDE_DIRS)
    target_include_directories(tflib PRIVATE ${TF_EXTRA_INCLUDE_DIRS})
    list(APPEND CMAKE_REQUIRED_INCLUDES ${TF_EXTRA_INCLUDE_DIRS})
endif()
if(TF_EXTRA_LIBRARY_DIRS)
    target_link_directories(tflib PRIVATE ${TF_EXTRA_LIBRARY_DIRS})
    list(APPEND CMAKE_REQUIRED_LINK_DIRECTORIES ${TF_EXTRA_LIBRARY_DIRS})
endif()

message(STATUS "Configuring ${TF_VERSION_STRING}")

if(TF_CORE)
    set(DISABLE_CORE 0)
else()
    set(DISABLE_CORE 1)
endif()
set(DEVELOPMENT ${TF_DEVELOPMENT})

search_for_function(select "bsd" tflib HAVE_SELECT)
if(NOT HAVE_SELECT)
    message(FATAL_ERROR "TinyFugue requires BSD-style select().")
endif()

# Preserve the incremental library search used by the historical configure
# script. The discovered libraries are attached to tflib in dependency order.
search_for_function(gethostbyname
    "bsd;nsl_s;nsl;resolv;socket" tflib HAVE_GETHOSTBYNAME)
search_for_function(connect "socket" tflib HAVE_CONNECT)
search_for_function(setlocale "intl" tflib HAVE_SETLOCALE)
search_for_function(strftime "intl" tflib HAVE_STRFTIME)
foreach(legacy_lib inet net)
    check_library_exists("${legacy_lib}" main "" "HAVE_LIB${legacy_lib}")
    if(HAVE_LIB${legacy_lib})
        target_link_libraries(tflib PRIVATE "${legacy_lib}")
    endif()
endforeach()

if(NOT HAVE_SETLOCALE)
    message(WARNING "Locales will not be supported.")
endif()

set(HAVE_SSL 0)
unset(HAVE_GNUTLS_OPENSSL_H CACHE)
unset(HAVE_GNUTLS_OPENSSL_H)
unset(HAVE_ERR_PEEK_ERROR CACHE)
unset(HAVE_ERR_PEEK_ERROR)
unset(HAVE_SSL_SET_TLSEXT_HOST_NAME CACHE)
unset(HAVE_SSL_SET_TLSEXT_HOST_NAME)
if(NOT TF_TLS STREQUAL "OFF")
    find_package(OpenSSL QUIET)
    if(OpenSSL_FOUND)
        target_link_libraries(tflib PRIVATE OpenSSL::SSL OpenSSL::Crypto)
        set(CMAKE_REQUIRED_LIBRARIES OpenSSL::SSL OpenSSL::Crypto)
        check_symbol_exists(ERR_peek_error "openssl/err.h" HAVE_ERR_PEEK_ERROR)
        check_symbol_exists(SSL_set_tlsext_host_name "openssl/ssl.h"
            HAVE_SSL_SET_TLSEXT_HOST_NAME)
        unset(CMAKE_REQUIRED_LIBRARIES)
        set(HAVE_SSL 1)
        message(STATUS "TLS support: OpenSSL")
    else()
        find_package(GnuTLS QUIET)
        find_library(GNUTLS_OPENSSL_LIBRARY NAMES gnutls-openssl
            HINTS ${TF_EXTRA_LIBRARY_DIRS})
        cmake_push_check_state()
        list(APPEND CMAKE_REQUIRED_INCLUDES ${GNUTLS_INCLUDE_DIRS})
        check_include_file("gnutls/openssl.h" HAVE_GNUTLS_OPENSSL_H)
        cmake_pop_check_state()
        if(GnuTLS_FOUND AND GNUTLS_OPENSSL_LIBRARY AND HAVE_GNUTLS_OPENSSL_H)
            target_link_libraries(tflib PRIVATE GnuTLS::GnuTLS
                "${GNUTLS_OPENSSL_LIBRARY}")
            set(HAVE_SSL 1)
            message(STATUS "TLS support: GnuTLS OpenSSL compatibility layer")
        endif()
    endif()
    tf_require_found(TF_TLS HAVE_SSL "OpenSSL or the GnuTLS OpenSSL compatibility layer")
endif()
if(NOT HAVE_SSL)
    message(STATUS "TLS support: disabled")
endif()
if(HAVE_GNUTLS_OPENSSL_H)
    set(HAVE_GNUTLS_OPENSSL_H 1)
else()
    set(HAVE_GNUTLS_OPENSSL_H 0)
endif()
if(HAVE_ERR_PEEK_ERROR)
    set(HAVE_ERR_PEEK_ERROR 1)
else()
    set(HAVE_ERR_PEEK_ERROR 0)
endif()
if(HAVE_SSL_SET_TLSEXT_HOST_NAME)
    set(HAVE_SSL_SET_TLSEXT_HOST_NAME 1)
else()
    set(HAVE_SSL_SET_TLSEXT_HOST_NAME 0)
endif()

set(TERMCAP 0)
set(HARDCODE "TERM_ansi")
if(NOT CYGWIN)
    set(HARDCODE "TERM_vt100")
endif()
if(NOT TF_TERMCAP STREQUAL "OFF")
    set(termcap_libraries)
    if(TF_TERMCAP_LIBRARY)
        list(APPEND termcap_libraries "${TF_TERMCAP_LIBRARY}")
    endif()
    list(APPEND termcap_libraries termcap ncursesw ncurses curses)
    search_for_function(tgetent "${termcap_libraries}" tflib HAVE_TGETENT)
    if(HAVE_TGETENT)
        set(TERMCAP 1)
        set(HARDCODE 0)
        message(STATUS "Terminal support: termcap-compatible library")
    endif()
    tf_require_found(TF_TERMCAP HAVE_TGETENT "a termcap-compatible library")
endif()
if(NOT TERMCAP)
    message(STATUS "Terminal support: hardcoded ${HARDCODE}")
endif()

if(TF_FLOAT)
    search_for_function(sqrt "m" tflib HAVE_SQRT)
    find_library(TF_MATH_LIBRARY m)
    if(TF_MATH_LIBRARY)
        target_link_libraries(tflib PRIVATE "${TF_MATH_LIBRARY}")
    endif()
endif()

set(WIDECHAR 0)
if(NOT TF_WIDECHAR STREQUAL "OFF")
    find_package(ICU 51.0 QUIET COMPONENTS uc i18n data)
    if(ICU_FOUND)
        set(WIDECHAR 1)
        target_link_libraries(tflib PUBLIC ICU::uc ICU::i18n ICU::data)
        cmake_push_check_state()
        list(APPEND CMAKE_REQUIRED_INCLUDES ${ICU_INCLUDE_DIRS})
        foreach(header wchar.h wctype.h unicode/ubrk.h unicode/uchar.h
                unicode/ucnv.h unicode/ustring.h unicode/utext.h
                unicode/utypes.h unicode/utf8.h)
            string(MAKE_C_IDENTIFIER "${header}" header_id)
            string(TOUPPER "${header_id}" header_id)
            check_include_file("${header}" "HAVE_${header_id}")
            if(NOT HAVE_${header_id})
                message(FATAL_ERROR
                    "ICU wide-character support requires <${header}>.")
            endif()
        endforeach()
        cmake_pop_check_state()
        message(STATUS "Wide-character support: ICU ${ICU_VERSION}")
    endif()
    tf_require_found(TF_WIDECHAR ICU_FOUND "ICU 51 or newer")
endif()
if(NOT WIDECHAR)
    message(STATUS "Wide-character support: disabled")
endif()

set(HAVE_LIBZ 0)
set(HAVE_ZLIB_H 0)
if(NOT TF_ZLIB STREQUAL "OFF")
    find_package(ZLIB QUIET)
    if(ZLIB_FOUND)
        target_link_libraries(tflib PRIVATE ZLIB::ZLIB)
        set(HAVE_LIBZ 1)
        set(HAVE_ZLIB_H 1)
        message(STATUS "MCCP support: zlib")
    endif()
    tf_require_found(TF_ZLIB ZLIB_FOUND "zlib")
endif()
if(NOT HAVE_LIBZ)
    message(STATUS "MCCP support: disabled")
endif()

find_package(PCRE2 REQUIRED)
target_link_libraries(tflib PUBLIC PCRE2::PCRE2)

check_include_file("unistd.h" HAVE_UNISTD_H)
check_include_file("memory.h" HAVE_MEMORY_H)
check_include_file("sys/select.h" HAVE_SYS_SELECT_H)
check_include_file("sys/wait.h" HAVE_SYS_WAIT_H)
check_include_file("locale.h" HAVE_LOCALE_H)
check_include_file("pwd.h" HAVE_PWD_H)
check_include_files("stdlib.h;stdarg.h;string.h;float.h" STDC_HEADERS)

search_for_header("netinet/in.h;sys/in.h;sys/netinet/in.h" NETINET_IN_H)
search_for_header("arpa/inet.h;sys/inet.h" ARPA_INET_H)
search_for_header("netdb.h;sys/netdb.h" NETDB_H)
if(NOT NETDB_H)
    message(FATAL_ERROR "Unable to find netdb.h or sys/netdb.h.")
endif()

check_struct_has_member("struct sockaddr" sa_len
    "sys/types.h;sys/socket.h" HAVE_SOCKADDR_SA_LEN LANGUAGE C)
check_headers_break("termios.h;termio.h;sgtty.h")
check_struct_has_member("struct winsize" ws_col
    "sys/types.h;sys/ptem.h" NEED_PTEM_H LANGUAGE C)
check_symbol_exists(h_errno "${NETDB_H}" HAVE_H_ERRNO)

foreach(function strstr strtol)
    string(TOUPPER "${function}" function_upper)
    check_function_exists("${function}" "HAVE_${function_upper}")
    if(NOT HAVE_${function_upper})
        message(FATAL_ERROR "Missing required function ${function}().")
    endif()
endforeach()
foreach(function
        bcopy bzero fileno getcwd gethostname getipnodebyname getpwnam
        gettimeofday getwd hstrerror index inet_aton inet_pton kill memcpy
        memset raise setrlimit sigaction srand srandom strcasecmp strchr
        strcmpi strcspn strerror stricmp strtod tzset waitpid)
    string(TOUPPER "${function}" function_upper)
    check_function_exists("${function}" "HAVE_${function_upper}")
endforeach()

check_type_size("short" SIZEOF_SHORT)
check_type_size("int" SIZEOF_INT)
check_type_size("long" SIZEOF_LONG)

unset(HAVE_GETADDRINFO CACHE)
unset(HAVE_GETADDRINFO)
unset(HAVE_GAI_STRERROR CACHE)
unset(HAVE_GAI_STRERROR)
if(TF_GETADDRINFO)
    check_function_exists(getaddrinfo HAVE_GETADDRINFO)
    check_function_exists(gai_strerror HAVE_GAI_STRERROR)
else()
    set(HAVE_GETADDRINFO 0)
    set(HAVE_GAI_STRERROR 0)
    set(TF_INET6 OFF)
endif()

set(ENABLE_INET6 0)
if(TF_INET6 AND HAVE_GETADDRINFO)
    check_struct_has_member("struct in6_addr" s6_addr
        "sys/types.h;sys/socket.h;${NETINET_IN_H}"
        HAVE_STRUCT_IN6_ADDR LANGUAGE C)
    if(HAVE_STRUCT_IN6_ADDR)
        set(IN6_ADDR in6_addr)
    else()
        check_struct_has_member("struct in_addr6" s6_addr
            "sys/types.h;sys/socket.h;${NETINET_IN_H}"
            HAVE_STRUCT_IN_ADDR6 LANGUAGE C)
        if(HAVE_STRUCT_IN_ADDR6)
            set(IN6_ADDR in_addr6)
        endif()
    endif()
    if(IN6_ADDR)
        set(ENABLE_INET6 1)
    else()
        message(WARNING "IPv6 requested, but no IPv6 address structure was found.")
    endif()
endif()

set(MAILDIR "")
if(TF_MAILCHECK)
    if(NOT TF_MAILDIR STREQUAL "AUTO")
        set(MAILDIR "${TF_MAILDIR}")
    elseif(DEFINED ENV{MAIL} AND NOT "$ENV{MAIL}" STREQUAL "")
        get_filename_component(MAILDIR "$ENV{MAIL}" DIRECTORY)
    else()
        foreach(candidate /usr/spool/mail /var/spool/mail /usr/mail /var/mail)
            if(IS_DIRECTORY "${candidate}")
                set(MAILDIR "${candidate}")
                break()
            endif()
        endforeach()
    endif()
endif()
if(MAILDIR)
    message(STATUS "Mail spool directory: ${MAILDIR}")
else()
    message(STATUS "Mail checking: disabled")
endif()

set(NCOLORS 16)
if(TF_256COLORS)
    set(NCOLORS 256)
endif()

set(ENABLE_ATCP 0)
set(ENABLE_GMCP 0)
set(ENABLE_OPTION102 0)
set(NO_HISTORY 0)
set(NO_PROCESS 0)
set(NO_FLOAT 0)
if(TF_ATCP)
    set(ENABLE_ATCP 1)
endif()
if(TF_GMCP)
    set(ENABLE_GMCP 1)
endif()
if(TF_OPTION102)
    set(ENABLE_OPTION102 1)
endif()
if(NOT TF_HISTORY)
    set(NO_HISTORY 1)
endif()
if(NOT TF_PROCESS)
    set(NO_PROCESS 1)
endif()
if(NOT TF_FLOAT)
    set(NO_FLOAT 1)
endif()

set(EXENAME tf)
if(TF_VERSIONED)
    set(EXENAME "tf-${TF_VERSION_SHORT}")
endif()
set(LIBNAME "${EXENAME}-lib")
set_target_properties(tf PROPERTIES OUTPUT_NAME "${EXENAME}")

cmake_host_system_information(RESULT TF_HOSTNAME QUERY HOSTNAME)
set(UNAME "${CMAKE_SYSTEM_NAME} ${CMAKE_SYSTEM_VERSION} ${CMAKE_SYSTEM_PROCESSOR}")

target_include_directories(tflib PRIVATE
    "${CMAKE_CURRENT_BINARY_DIR}/src"
    "${CMAKE_CURRENT_SOURCE_DIR}/src")
target_include_directories(tf PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/src")

add_subdirectory(src)
include(cmake/TfLib.cmake)
include(cmake/Docs.cmake)
include(cmake/Install.cmake)

message(STATUS "Install executable: ${CMAKE_INSTALL_BINDIR}/${EXENAME}")
message(STATUS "Install library: ${CMAKE_INSTALL_DATAROOTDIR}/${LIBNAME}")
